hphp/hack/test/typecheck/new_inference/async_lambda.php.exp
File "async_lambda.php", line 6, characters 11-25:
Invalid argument (Typing[4323])
  File "collections/Set.hhi", line 195, characters 23-24:
  `Tu` is a constrained type parameter
  File "collections/Set.hhi", line 195, characters 29-36:
  This type constraint is violated
  File "collections/Set.hhi", line 195, characters 29-36:
  Expected `arraykey`
  File "async_lambda.php", line 6, characters 11-25:
  But got `Awaitable<int>` (result of an `async` function)
File "async_lambda.php", line 6, characters 11-25:
Typing error (Typing[4323])
  File "collections/Set.hhi", line 195, characters 23-24:
  `Tu` is a constrained type parameter
  File "collections/Set.hhi", line 195, characters 29-36:
  This type constraint is violated
  File "collections/Set.hhi", line 195, characters 29-36:
  Expected `arraykey`
  File "async_lambda.php", line 6, characters 11-25:
  But got `Awaitable<[unresolved]>` (result of an `async` function)
